--- a/ProjetosAulas/CSS3/projetoCSS3-basico/PaginaModelo/html/css/estilo.css
+++ b/ProjetosAulas/CSS3/projetoCSS3-basico/PaginaModelo/html/css/estilo.css
@@ -48,6 +48,7 @@ p{
 	/*border: 1px solid red;*/
 	font-size: 1.5em;
 	padding: 20px;
+	text-align: center;
 }
 .centralizar {
 	text-align: center;
